// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Custom Class Names and Styling 1`] = `
<div
  class="customClassName Grid-grid-0"
  style="background-color: purple;"
>
  <div
    class="Grid-gridSpan3-0"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Renders Children 1`] = `
<div
  class="Grid-grid-0"
>
  <div
    class="Grid-gridSpan3-0"
  >
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
    <div
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
</div>
`;

exports[`Grid Renders Children with custom layout data 1`] = `
<div
  class="Grid-grid-0"
>
  <div
    class="Grid-gridSpan12-0"
  >
    <div
      data-layout="[object Object]"
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
  <div
    class="Grid-gridSpan3-0"
  >
    <div
      data-layout="[object Object]"
      style="height: 6rem; width: 100%; background-color: rgb(169, 234, 255);"
    />
  </div>
  <span
    class="Grid-gridSpan1-0"
  />
</div>
`;
